--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -7,7 +7,7 @@
   <div class="card"><h3>Schlüssel erstellen</h3>
     <form method="post" action="/admin/keys/create" class="row">
       <input class="grow" name="code" placeholder="Code (leer = automatisch)"/>
-      <input name="days" type="number" min="1" class="grow" placeholder="Gültigkeit in Tagen"/>
+      <input name="days" type="number" min="1" value="30" class="grow" placeholder="Gültigkeit in Tagen"/>
       <button type="submit" class="btn btn-accent">Erstellen</button>
     </form>
   </div>
