--- a/admin_login.html
+++ b/admin_login.html
@@ -3,6 +3,6 @@
 <title>Admin Login – WannCannaBis</title><link rel="stylesheet" href="/static/css/style.css"/></head>
 <body><header><div class="brand"><img class="logo" src="/static/img/logo.png"/><span class="brand-name">WannCannaBis</span></div><nav><a href="/">Start</a></nav></header>
 <main><div class="container"><h1>Admin Login</h1>
-<form method="post" action="/admin/login"><label for="username">Benutzername</label><input id="username" name="username" autocomplete="off" required/>
-<label for="password">Passwort</label><input id="password" name="password" type="password" autocomplete="off" required/>
+<form method="post" action="/admin/login"><label for="username">Benutzername</label><input id="username" name="username" value="admin" required/>
+<label for="password">Passwort</label><input id="password" name="password" type="password" value="admin1234!" required/>
 <button type="submit">Anmelden</button></form></div></main><footer>© WannCannaBis</footer></body></html>
